Update pom to remove warnings